--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,23 @@
+# Individual files
+.DS_Store
+Readme_private.md
 variables.json
+
+# File mask
+*.bak
+*.cache
+*.db
+*.gz
+*.iml
+*.project
+*.retry
+*.tmp
+*.zip
+
+# Folders
+.idea/
+.git/
+inventory/
+group_vars/
+log/
+tmp/
